# sol-trade-sdk

./: .gitignore  Cargo.toml  EXTREME_PERFORMANCE.md  PERFORMANCE.md  PERFORMANCE_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_CN.md  test_latency.sh
docs/: ADDRESS_LOOKUP_TABLE.md  ADDRESS_LOOKUP_TABLE_CN.md  CODE_REVIEW_REPORT.md  GAS_FEE_STRATEGY.md  GAS_FEE_STRATEGY_CN.md  LOW_LATENCY_BOTS.md  LOW_LATENCY_BOTS_CN.md  NONCE_CACHE.md  NONCE_CACHE_CN.md  TRADING_PARAMETERS.md  TRADING_PARAMETERS_CN.md
examples/: README.md  README_CN.md
examples/address_lookup/: Cargo.toml  README.md  README_CN.md
examples/bonk_copy_trading/: README.md  README_CN.md
examples/bonk_sniper_trading/: README.md  README_CN.md
examples/cli_trading/: Cargo.toml  README.md  README_CN.md
examples/gas_fee_strategy/: README.md  README_CN.md
examples/meteora_damm_v2_direct_trading/: Cargo.toml  README.md  README_CN.md
examples/middleware_system/: README.md  README_CN.md
examples/nonce_cache/: Cargo.toml  README.md  README_CN.md
examples/pumpfun_copy_trading/: Cargo.toml  README.md  README_CN.md
examples/pumpfun_sniper_trading/: Cargo.toml  README.md  README_CN.md
examples/pumpfun_sniper_trading/src/: main.rs
examples/pumpswap_direct_trading/: Cargo.toml  README.md  README_CN.md
examples/pumpswap_trading/: .env.example  Cargo.toml  README.md  README_CN.md
examples/pumpswap_trading/src/: main.rs
examples/raydium_amm_v4_trading/: README.md  README_CN.md
examples/raydium_cpmm_trading/: README.md  README_CN.md
idl/: README.md
src/: lib.rs
(+147 files in other folders)
